--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,15 @@
 # Coolify deployment configuration using Nixpacks
 
 [variables]
-# Node version to use (Railway/Nixpacks will pick this version)
-NIXPACKS_NODE_VERSION = "18"  # changed from 20
+# Node version to use
+NIXPACKS_NODE_VERSION = "18"
 
 [phases.setup]
 # Install necessary nix packages and prepare git for large repos/LFS
-nixPkgs = ["nodejs"]  # just 'nodejs' to use the version from NIXPACKS_NODE_VERSION
+nixPkgs = ["nodejs", "git", "git-lfs"]
 cmds = [
-  # Install Git LFS
-  "apt-get update && apt-get install -y git-lfs && git lfs install",
+  # Enable Git LFS (won’t fail if no LFS files exist)
+  "git lfs install || true",
   # Git tweaks to handle large repos / LFS
   "git config --global http.postBuffer 524288000",
   "git config --global http.maxRequestBuffer 524288000",
@@ -17,21 +17,17 @@ cmds = [
 ]
 
 [phases.install]
-# Clone the repo shallowly and pull LFS files
+# Install npm dependencies
 cmds = [
-  "rm -rf /artifacts/app || true",
-  "git clone --depth=1 https://github.com/keeslam/CarRentalManager.git /artifacts/app",
-  "cd /artifacts/app && git lfs pull",
-  # Install npm dependencies
-  "cd /artifacts/app && npm ci"
+  "npm ci"
 ]
 
 [phases.build]
 # Build the app
 cmds = [
-  "cd /artifacts/app && npm run build"
+  "npm run build"
 ]
 
 [start]
 # Start command
-cmd = "cd /artifacts/app && npm start"
+cmd = "npm start"
