--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -17,7 +17,7 @@ cmds = [
 ]
 
 [phases.install]
-# Clone repo + install dependencies
+# Clone repo + install dependencies (ALLEEN DEZE EÉN KEER!)
 cmds = [
   # Clean previous attempts
   "rm -rf /artifacts/app /artifacts/source.tar.gz || true",
@@ -28,6 +28,10 @@ cmds = [
   
   # Fallback: als clone faalt, probeer download als zip
   "cd /artifacts/app && [ -d .git ] || (rm -rf * && wget -qO- https://github.com/keeslam/CarRentalManager/archive/refs/heads/main.zip | tar -xzf - --strip-components=1)",
+  
+  # Debug info (optioneel, verwijder na succesvolle deployment)
+  "cd /artifacts/app && echo '=== DEBUG: Contents after clone ===' && ls -la",
+  "cd /artifacts/app && echo '=== DEBUG: package.json exists? ===' && test -f package.json && echo 'YES' || echo 'NO'",
   
   # Install Node dependencies
   "cd /artifacts/app && npm ci --only=production"
@@ -40,13 +44,3 @@ cmds = [
 
 [start]
 cmd = "cd /artifacts/app && npm start"
-
-# Debug info (optioneel, verwijder na succesvolle deployment)
-[phases.install]
-cmds = [
-  # ... (bovenstaande commands)
-  # Voeg debug toe om te zien wat er gebeurt
-  "cd /artifacts/app && echo '=== DEBUG: Contents after clone ===' && ls -la",
-  "cd /artifacts/app && echo '=== DEBUG: package.json exists? ===' && test -f package.json && echo 'YES' || echo 'NO'",
-  "cd /artifacts/app && npm ci --only=production"
-]
